Updated document with goals

--- a/document.tex
+++ b/document.tex
@@ -82,6 +82,17 @@ to reveal what exactly they voted for. The architecture of our system requires
 that all the participants are in a confined space and are able to exchange some
 sort of credential using a non-electronic channel.
 
+The goal of this project is to build Systems which allows perform elections and
+polls on mobile Android devices under the following terms:
+\begin{itemize}
+  \item Voting needs to be done ad-hoc, meaning that no infrastructure other
+  than the participants mobile devices are required to perform an election or
+  poll.
+  \item The voting schema is based on the CGS97 approach proposed by Cramer et.
+  al. \cite{CGS97}
+\end{itemize}
+
+
 \printbibliography
 
 \end{document}
