Finished introduction, started background and related work

--- a/document.tex
+++ b/document.tex
@@ -7,7 +7,7 @@
 \usepackage[english]{babel} 
 \usepackage[utf8]{inputenc}
 \usepackage[backend=bibtex8]{biblatex}
-\bibliography{bib/bibliography}
+\bibliography{bib/bibliography.bib}
 
 % Using links in PDFs, but without the ugly borders
 \usepackage{hyperref}
@@ -92,6 +92,35 @@ polls on mobile Android devices under the following terms:
   al. \cite{CGS97}
 \end{itemize}
 
+In previous projects during the master studies, some groundwork has been
+implemented which can now be used in this projects. The previously implemented
+projects are the following:
+\begin{itemize}
+  \item \textbf{UniCrypt:} Unicrypt is a cryptographic library developed by the
+  members of the E-Voting Group of the Bern University of Applied Sciences. It
+  provides cryptographic building blocks such as the ElGamal crypto system, Zero
+  Knowledge Proofs, digital Signatures, etc. 
+  \item \textbf{InstaCircle: } InstaCircle provides a decentralized
+  communication platform for Android devices. It allows to exchange messages
+  using WiFi among a closed user group.
+\end{itemize}
+The projects mentioned above will be discussed in more detail in the section
+Background and related work.
+
+The time budget of this Master Thesis is one year, although the project will be
+implemented part time. It is equivalent to 27 ECTS credits. 
+
+\chapter{Background and related work}
+This section gives an overview of the theoretical foundations and the work which
+has been done previously on which this project is built on.
+
+\section{The voting schema CGS97}
+In 1997, Cramer, Gennaro and Schoenmakers proposed a scheme which allows to
+do E-Voting in a secure and verifyable manner. 
+
+\section{UniCrypt}
+
+\section{InstaCircle}
 
 \printbibliography
 
