--- a/bib/bibliography.bib
+++ b/bib/bibliography.bib
@@ -164,6 +164,13 @@
     Title = {A {S}ecure and {O}ptimally {E}fficient {M}ulti-{A}uthority {E}lection {S}cheme},
     Year = {1997}}
     
+@article{EG84,
+	Author = {EL GAMAL, Taher},
+    Date-Added = {2013-03-02 17:11:03 +0200},
+    Date-Modified = {2013-03-02 17:11:03 +0200},
+    Title = {A public key cryptosystem and a signature scheme based on discrete logarithms},
+    Year = {1984}}
+    
 @webpage{BouncyCastle,
     Date-Added = {2012-02-27 15:00:00 +0200},
     Date-Modified = {2012-02-27 15:00:00 +0200},
