Background and related work

--- a/bib/bibliography.bib
+++ b/bib/bibliography.bib
@@ -151,7 +151,7 @@
     Year = {2010}}  
     
 @article{HKRS12,
-    Author = {HAO, Feng and KHADER, Dalia and RYAN, Peter Y. A. and SMYTH, Ben},
+    Author = {KHADER, Dalia and HAO, Feng and RYAN, Peter Y. A. and SMYTH, Ben},
     Date-Added = {2012-09-22 21:25:00 +0200},
     Date-Modified = {2012-09-22 21:25:00 +0200},
     Title = {{A} {F}air and {R}obust {V}oting {S}ystem by {B}roadcast},
@@ -170,6 +170,20 @@
     Date-Modified = {2013-03-02 17:11:03 +0200},
     Title = {A public key cryptosystem and a signature scheme based on discrete logarithms},
     Year = {1984}}
+    
+@article{ritter13a,
+	Author = {RITTER, Juerg},
+    Date-Added = {2013-03-03 17:11:03 +0200},
+    Date-Modified = {2013-03-03 17:11:03 +0200},
+    Title = {InstaCircle - A Location-Bound Ad-Hoc Network for Android Devices},
+    Year = {2013}}
+    
+@article{ritter12,
+	Author = {RITTER, Juerg},
+    Date-Added = {2013-03-03 17:11:03 +0200},
+    Date-Modified = {2013-03-03 17:11:03 +0200},
+    Title = {UniCrypt – A Cryptographic Library Implemented in Java},
+    Year = {2012}}
     
 @webpage{BouncyCastle,
     Date-Added = {2012-02-27 15:00:00 +0200},
