added more content

--- a/bib/bibliography.bib
+++ b/bib/bibliography.bib
@@ -175,14 +175,14 @@
 	Author = {RITTER, Juerg},
     Date-Added = {2013-03-03 17:11:03 +0200},
     Date-Modified = {2013-03-03 17:11:03 +0200},
-    Title = {InstaCircle - A Location-Bound Ad-Hoc Network for Android Devices},
+    Title = {InstaCircle -- A Location-Bound Ad-Hoc Network for Android Devices},
     Year = {2013}}
     
 @article{ritter12,
 	Author = {RITTER, Juerg},
     Date-Added = {2013-03-03 17:11:03 +0200},
     Date-Modified = {2013-03-03 17:11:03 +0200},
-    Title = {UniCrypt – A Cryptographic Library Implemented in Java},
+    Title = {UniCrypt -- A Cryptographic Library Implemented in Java},
     Year = {2012}}
     
 @webpage{BouncyCastle,
